feat: Complete and modernize the Canvas API implementation
This commit provides a comprehensive update to the Canvas API,
bringing it closer to the modern HTML5 specification and introducing
support for off-screen canvases and web workers.

Key changes include:
- Restored the `CanvasRenderingContext2D` implementation from a
  previous commit and adapted it to the current codebase.
- Implemented missing Canvas 2D API features, such as `setLineDash`,
  `ellipse`, `roundRect`, and `getTransform`.
- Introduced an `OffscreenCanvas` class to allow for canvas
  rendering in non-GUI contexts, like background threads.
- Implemented a simple Web Worker API with a `Worker` class that
  runs JavaScript in a separate thread and communicates with the
  main thread via `postMessage`.
- Ensured thread-safe transfer of canvas image data between the
  main thread and worker threads.
- Added a comprehensive test suite to verify the correctness of the
  new features.